overlay/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-nextjs-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: argocd.nextjs.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-nextjs-service
                port:
                  number: 80
